apps/uptime-kuma/uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - name: web
      port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
        tier: app
    spec:
      containers:
        - name: uptime-kuma
          image: "louislam/uptime-kuma:2@sha256:3e24e96c89efff0e3a4b0698cbdd36c15ad3022371db57166e5588853002ee5c"
          ports:
            - containerPort: 3001
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 50m
              memory: 320Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/uptime-kuma/data
            type: Directory
